# slivka-irv

./: .gitignore  LICENSE  README.md  __main__.py  irv.py  requirements.txt  setup.cfg  setup.py  test_irv.py
.github/workflows/: python-app.yml
docs/: making_wc_election.md
irv/: __init__.py  __main__.py  ballots.py  constants.py  env.py  irv.py
irv_tests/: ex_1.csv  ex_2.csv  fptp_1.csv  fptp_2.csv  halfsamefirst.csv  no_tie_1.csv  no_tie_2.csv  noconfidence_1.csv  noconfidence_2.csv  oneballot.csv  sample.csv  tie_1.csv  tie_2.csv
tests/: __init__.py  test_irv.py
tests/irv/: __init__.py  test_irv.py  test_irv_new_format.py  test_norman.py
tests/irv/test_cases/: completely_empty.csv  dummy.csv  empty_ballot.csv  fptp_2.csv  noconfidence_with_empty.csv  pretty_empty.csv  sample_with_empty.csv  silly_names.csv  tie_1.csv  tie_2.csv  tied_losers.csv  uncontested.csv  uncontested_1.csv  uncontested_2.csv  uncontested_3.csv  uncontested_4.csv
tests/test_cases/: halfsamefirst.csv  no_tie_2.csv  noconfidence_3.csv
tests/wildcat_connection/: __init__.py  conftest.py  test_wc.py
tests/wildcat_connection/test_ballot_format/8_way_race/: Q.csv
tests/wildcat_connection/test_ballot_format/multiple_questions1/: ABC.csv  Color.csv  Fruit.csv
tests/wildcat_connection/test_cases/: 8_way_race.csv  multiple_questions1.csv  multiple_questions2.csv  non_ordered_columns.csv  single_question.csv
tests/wildcat_connection/test_invalid/: duplicate_questions.csv  invalid_ranks.csv  invalid_ranks2.csv
wildcat_connection/: __init__.py  constants.py  csv.py  env.py  utils.py
(+8 files in other folders)
